--- a/main.html
+++ b/main.html
@@ -10,7 +10,24 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<form>
+	<h1>Feedback Form</h1>
+	<label for="name">Name</label>
+	<input id="name" type="text" minlength="3" maxlength="50" required>
+	<br><br>
 
+	<label for="portfolio">Portfolio</label>
+	<input id="portfolio" type="url" required>
+	<br><br>
+
+	<label for="favColor">Favorite Color</label>
+	<input id="favColor" type="color">
+	<br><br>
+
+	<label for="likeness">Likeness</label>
+	<input id="likeness" type="range" min="1" max="100" >
+	<br><br>
+</form>
 </body>
 
 </html>
