--- a/main.html
+++ b/main.html
@@ -27,6 +27,8 @@
 	<label for="likeness">Likeness</label>
 	<input id="likeness" type="range" min="1" max="100" >
 	<br><br>
+
+	<input type="submit" value="submit">
 </form>
 </body>
 
